# overlay_session_v1.5

OverlaySession/: .gitignore  settings.gradle
OverlaySession/adbTest/: README.txt  startOverlay.bat  startOverlayServiceTest.bat  stopOverlay.bat  stopOverlayServiceTest.bat
OverlaySession/app/: build.gradle
OverlaySession/app/src/androidTest/java/com/qualcomm/qti/openxr/overlaysession/: ExampleInstrumentedTest.java
OverlaySession/app/src/main/: AndroidManifest.xml
OverlaySession/app/src/main/aidl/com/qualcomm/qti/openxr/overlaysession/: IOverlayService.aidl
OverlaySession/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  openxr_overlay_app.cpp  openxr_overlay_app.h
OverlaySession/app/src/main/cpp/AppCommon/cpp/: AppCommon.cpp  AppCommon.h
OverlaySession/app/src/main/cpp/Common/DataStructures/cpp/: HashTable.hpp
OverlaySession/app/src/main/cpp/Common/GL/: README.txt
OverlaySession/app/src/main/cpp/Common/GL/cpp/: Extensions.h  Geometry.cpp  Geometry.h  KtxLoader.cpp  KtxLoader.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h
OverlaySession/app/src/main/cpp/Common/Log/: LogGL.h  LogUtils.c  LogUtils.h
OverlaySession/app/src/main/java/com/qualcomm/qti/openxr/overlaysession/: MainActivity.java  OverlayService.java  OverlayServiceImpl.java
OverlaySession/app/src/main/res/values/: strings.xml  themes.xml
OverlaySession/app/src/main/res/values-night/: themes.xml
OverlaySession/app/src/test/java/com/qualcomm/qti/openxr/overlaysession/: ExampleUnitTest.java
OverlaySession/gradle/wrapper/: gradle-wrapper.properties
